--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>react-loadable-example</title>
-    <style>
-      body {
-        font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-        max-width: 600px;
-        margin: 0 auto;
-      }
-    </style>
+    <title>Loadable Webpack Example</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="scripts/bundle-main.js"></script>
+    <script type="text/javascript" src="build/bundle-main.js"></script>
   </body>
 </html>
